--- a/csharp-cgdk.csproj
+++ b/csharp-cgdk.csproj
@@ -98,6 +98,7 @@
     <Compile Include="MyCode\GroupContainer.cs" />
     <Compile Include="MyCode\MathHelper.cs" />
     <Compile Include="MyCode\MyStrategy.cs" />
+    <Compile Include="MyCode\MyStrategyNoBuildings.cs" />
     <Compile Include="MyCode\Point.cs" />
     <Compile Include="MyCode\PointVehilceTypeContainer.cs" />
     <Compile Include="MyCode\Rectangle.cs" />
