--- a/csharp-cgdk.csproj
+++ b/csharp-cgdk.csproj
@@ -98,9 +98,9 @@
     <Compile Include="MyCode\GroupContainer.cs" />
     <Compile Include="MyCode\MathHelper.cs" />
     <Compile Include="MyCode\MyStrategy.cs" />
-    <Compile Include="MyCode\MyStrategyNoBuildings.cs" />
     <Compile Include="MyCode\Point.cs" />
     <Compile Include="MyCode\PointVehilceTypeContainer.cs" />
+    <Compile Include="MyCode\PotentialFieldsHelper.cs" />
     <Compile Include="MyCode\Rectangle.cs" />
     <Compile Include="MyCode\RotateToEnemyPointContainer.cs" />
     <Compile Include="MyCode\RotationContainer.cs" />
